working on responsiveness of mobile search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,19 +62,21 @@
                   <div id="hiddenNav" class="hideSearch">
                       <form method="get" action="#" enctype="multipart/form-data">
                         <div class="navMobileSearchContainer">
-                          <div class="navMobileCityContainer">
+                          <div class="navMobileCityContainer center-block">
                             <div class="form-group">
                               <input type="text" class="form-control" id="nav_mobile_Location" name="navLocation" placeholder="Find An Event" required />
                             </div>
                           </div>
-                          <div class="navMobileDateFrom">
-                            <div class="form-group">
-                              <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_starting_date" name="nav_starting_date" placeholder="From" required />
+                          <div class="navMobileDatesContainer center-block">
+                            <div class="navMobileDateFrom">
+                              <div class="form-group">
+                                <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_starting_date" name="nav_starting_date" placeholder="From" required />
+                              </div>
                             </div>
-                          </div>
-                          <div class="navMobileDateTo">
-                            <div class="form-group">
-                              <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_ending_date" name="nav_ending_date" placeholder="To" required />
+                            <div class="navMobileDateTo">
+                              <div class="form-group">
+                                <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_ending_date" name="nav_ending_date" placeholder="To" required />
+                              </div>
                             </div>
                           </div>
                           <div class="navMobileButtonContainer center-block">
