--- a/public/css/header.css
+++ b/public/css/header.css
@@ -255,12 +255,7 @@ nav a {
 }
 
 .navMobileSearchContainer {
-  display: flex;
-  flex-direction: row;
-}
-
-.navMobileSearchContainer input {
-  width: 100%;
+  background-color: black;
 }
 
 .navMobileSearchContainer .form-group {
@@ -272,7 +267,7 @@ nav a {
 }
 
 .navMobileSearchContainer .navMobileCityContainer {
-  flex: 4;
+  width: 95%;
 }
 
 .navMobileSearchContainer .navMobileCityContainer input {
@@ -283,11 +278,18 @@ nav a {
   border-right: 0;
 }
 
-.navMobileSearchContainer .navMobileDateFrom {
-  flex: 3;
+.navMobileSearchContainer .navMobileDatesContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.navMobileSearchContainer .navMobileDateFrom input {
+.navMobileSearchContainer .navMobileDatesContainer .navMobileDateFrom {
+  width: 95%;
+}
+
+.navMobileSearchContainer .navMobileDatesContainer .navMobileDateFrom input {
   font-size: 12px;
   border-top: 2px solid black;
   border-bottom: 2px solid black;
@@ -295,11 +297,11 @@ nav a {
   border-right: 0;
 }
 
-.navMobileSearchContainer .navMobileDateTo {
-  flex: 3;
+.navMobileSearchContainer .navMobileDatesContainer .navMobileDateTo {
+  width: 95%;
 }
 
-.navMobileSearchContainer .navMobileDateTo input {
+.navMobileSearchContainer .navMobileDatesContainer .navMobileDateTo input {
   font-size: 12px;
   border-top: 2px solid black;
   border-bottom: 2px solid black;
@@ -310,17 +312,15 @@ nav a {
 .navMobileSearchContainer .navMobileButtonContainer {
   display: flex;
   align-items: center;
-  flex: 0.1;
+  justify-content: center;
   cursor: pointer;
+  width: 95%;
 }
 
 .navMobileSearchContainer .navMobileButtonContainer button {
-  margin-left: -2px;
+  width: 50%;
   background-color: black;
   color: white;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  transition: 0.3s;
 }
 
 .navSearchIcon {
