--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -214,11 +214,7 @@ nav a {
   color: gray;
 }
 .navMobileSearchContainer {
-  display: flex;
-  flex-direction: row;
-  input {
-    width: 100%;
-  }
+  background-color: black;
   .form-group {
     margin-bottom: 0;
   }
@@ -226,7 +222,7 @@ nav a {
     border-radius: 0;
   }
   .navMobileCityContainer {
-    flex: 4;
+    width: 95%;
     input {
       font-size: 12px;
       border-top: 2px solid black;
@@ -235,38 +231,42 @@ nav a {
       border-right: 0;
     }
   }
-  .navMobileDateFrom {
-    flex: 3;
-    input {
-      font-size: 12px;
-      border-top: 2px solid black;
-      border-bottom: 2px solid black;
-      border-left: 0;
-      border-right: 0;
+  .navMobileDatesContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    .navMobileDateFrom {
+      width: 95%;
+      input {
+        font-size: 12px;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
+        border-left: 0;
+        border-right: 0;
+      }
     }
-  }
-  .navMobileDateTo {
-    flex: 3;
-    input {
-      font-size: 12px;
-      border-top: 2px solid black;
-      border-bottom: 2px solid black;
-      border-left: 0;
-      border-right: 2px solid black;
+    .navMobileDateTo {
+      width: 95%;
+      input {
+        font-size: 12px;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
+        border-left: 0;
+        border-right: 2px solid black;
+      }
     }
   }
   .navMobileButtonContainer {
     display: flex;
     align-items: center;
-    flex: 0.1;
+    justify-content: center;
     cursor: pointer;
+    width: 95%;
     button {
-      margin-left: -2px;
+      width: 50%;
       background-color: black;
       color: white;
-      border-top-right-radius: 5px;
-      border-bottom-right-radius: 5px;
-      transition: 0.3s;
     }
   }
 }
