working on nav search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
                             </div>
                           </div>
                           <div class="navMobileButtonContainer center-block">
-                            <button type="button" class="btn" id="navMobileSubmitSearch"><i class="fa fa-search navSearchIcon" aria-hidden="true"></i></button>
+                            <button type="button" class="btn" id="navMobileSubmitSearch">Search</button>
                           </div>
                         </div>
                         <div id="mobileError" class="hiddenError error">
