--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -225,10 +225,6 @@ nav a {
     width: 95%;
     input {
       font-size: 12px;
-      border-top: 2px solid black;
-      border-bottom: 2px solid black;
-      border-left: 2px solid black;
-      border-right: 0;
     }
   }
   .navMobileDatesContainer {
@@ -238,22 +234,30 @@ nav a {
     justify-content: space-between;
     .navMobileDateFrom {
       width: 95%;
-      input {
-        font-size: 12px;
-        border-top: 2px solid black;
-        border-bottom: 2px solid black;
-        border-left: 0;
-        border-right: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .form-group {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        input {
+          font-size: 12px;
+        }
       }
     }
     .navMobileDateTo {
       width: 95%;
-      input {
-        font-size: 12px;
-        border-top: 2px solid black;
-        border-bottom: 2px solid black;
-        border-left: 0;
-        border-right: 2px solid black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .form-group {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        input {
+          font-size: 12px;
+        }
       }
     }
   }
@@ -265,8 +269,10 @@ nav a {
     width: 95%;
     button {
       width: 50%;
-      background-color: black;
-      color: white;
+      font-size: 12px;
+      background-color: white;
+      border-radius: 5px;
+      color: black;
     }
   }
 }
