--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -377,13 +377,17 @@ body {
 .conversationContainer .conversationHeader {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   background-color: black;
   color: white;
   padding: 10px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+}
+
+.conversationContainer .conversationHeader .conversationDateContainer {
+  font-size: 10px;
 }
 
 .conversationContainer .conversationBody {
@@ -583,5 +587,8 @@ td {
   }
   .scroll_box {
     width: 95%;
+  }
+  .conversationContainer .conversationHeader .conversationDateContainer {
+    font-size: 12px;
   }
 }
