--- a/public/css/header.css
+++ b/public/css/header.css
@@ -256,6 +256,7 @@ nav a {
 
 .navMobileSearchContainer {
   background-color: black;
+  padding: 3px;
 }
 
 .navMobileSearchContainer .form-group {
@@ -267,7 +268,8 @@ nav a {
 }
 
 .navMobileSearchContainer .navMobileCityContainer {
-  width: 95%;
+  width: 100%;
+  margin-bottom: 5px;
 }
 
 .navMobileSearchContainer .navMobileCityContainer input {
@@ -279,10 +281,13 @@ nav a {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 5px;
+  width: 100%;
 }
 
 .navMobileSearchContainer .navMobileDatesContainer .navMobileDateFrom {
-  width: 95%;
+  flex: 1;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -299,7 +304,8 @@ nav a {
 }
 
 .navMobileSearchContainer .navMobileDatesContainer .navMobileDateTo {
-  width: 95%;
+  width: 100%;
+  flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -324,7 +330,7 @@ nav a {
 }
 
 .navMobileSearchContainer .navMobileButtonContainer button {
-  width: 50%;
+  width: 30%;
   font-size: 12px;
   background-color: white;
   border-radius: 5px;
