working on nav search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,11 +70,13 @@
                           <div class="navMobileDatesContainer center-block">
                             <div class="navMobileDateFrom">
                               <div class="form-group">
+                                <label for="nav_starting_date" class="form-control">From:</label>
                                 <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_starting_date" name="nav_starting_date" placeholder="From" required />
                               </div>
                             </div>
                             <div class="navMobileDateTo">
                               <div class="form-group">
+                                <label for="nav_starting_date" class="form-control">To:</label>
                                 <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_ending_date" name="nav_ending_date" placeholder="To" required />
                               </div>
                             </div>
