working on nav search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,13 +64,13 @@
                         <div class="navMobileSearchContainer">
                           <div class="navMobileCityContainer center-block">
                             <div class="form-group">
-                              <input type="text" class="form-control" id="nav_mobile_Location" name="navLocation" placeholder="Find An Event" required />
+                              <input type="text" id="nav_mobile_Location" name="navLocation" placeholder="Find An Event" required />
                             </div>
                           </div>
                           <div class="navMobileDatesContainer center-block">
                             <div class="navMobileDateFrom">
                               <div class="form-group">
-                                <label for="nav_starting_date" class="form-control">From:</label>
+                                <label for="nav_starting_date">From:</label>
                                 <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_starting_date" name="nav_starting_date" placeholder="From" required />
                               </div>
                             </div>
