--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -246,6 +246,9 @@ nav a {
       justify-content: center;
       label {
         color: white;
+        margin: 0;
+        font-size: 12px;
+        margin-right: 2px;
       }
       .form-group {
         display: flex;
@@ -264,6 +267,9 @@ nav a {
       justify-content: center;
       label {
         color: white;
+        margin: 0;
+        font-size: 12px;
+        margin-right: 2px;
       }
       .form-group {
         display: flex;
