working on nav search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
                         <div class="navMobileSearchContainer">
                           <div class="navMobileCityContainer center-block">
                             <div class="form-group">
-                              <input type="text" id="nav_mobile_Location" name="navLocation" placeholder="Find An Event" required />
+                              <input type="text" class="form-control" id="nav_mobile_Location" name="navLocation" placeholder="Find An Event" required />
                             </div>
                           </div>
                           <div class="navMobileDatesContainer center-block">
@@ -76,7 +76,7 @@
                             </div>
                             <div class="navMobileDateTo">
                               <div class="form-group">
-                                <label for="nav_starting_date" class="form-control">To:</label>
+                                <label for="nav_starting_date">To:</label>
                                 <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_ending_date" name="nav_ending_date" placeholder="To" required />
                               </div>
                             </div>
