--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -69,6 +69,11 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    label {
+      color: white;
+      font-size: 14px;
+      margin-right: 4px;
+    }
     input {
       width: 100%;
       border-radius: 5px;
@@ -98,6 +103,11 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    label {
+      color: white;
+      font-size: 14px;
+      margin-right: 4px;
+    }
     input {
       width: 100%;
       border: 2px solid black;
