--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
         </div>
         <div class="dateFrom">
           <div class="form-group">
-            <label for="ending_date" class="hidden-sm hidden-md hidden-lg">To:</label>
+            <label for="ending_date" class="hidden-sm hidden-md hidden-lg">From:</label>
             <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="index_date_from" name="starting_date" placeholder="From" data-allow-input=true required />
           </div>
         </div>
