--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -14,6 +14,10 @@
   color: white;
   border-top-left-radius: 5px !important;
   border-top-right-radius: 5px !important;
+  button {
+    color: white;
+    opacity: 1;
+  }
 }
 .modal-footer {
   button {
