css for about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,5 @@
 <% content_for :stylesheets do %>
+<link rel="stylesheet" href="/css/pages/about.css" />
 <% end %>
 
 
@@ -9,7 +10,7 @@
     </div>
     <div class="col-xs-12">
       <div class="col-xs-12 col-md-4 profile-picture-box">
-        <img class="img-responsive" src="/assets/Isaiah.jpg"/>
+        <img class="img-responsive img-half" src="/assets/Isaiah.jpg"/>
       </div>
       <div class="col-xs-12 col-md-8 bio-box">
         <h4 class="name">Isaiah Fasoldt</h4>
