--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -4,6 +4,7 @@
 }
 .modal {
   top: 60px !important;
+  -webkit-overflow-scrolling: none !important;
 }
 .modal-content {
   border-top-left-radius: 6px !important;
