working on nav search bar

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,8 +12,8 @@
           </div>
         </div>
         <div class="dateFrom">
-          <div class="form-group">
-            <label for="ending_date" class="hidden-sm hidden-md hidden-lg">From:</label>
+          <div class="form-group dateTextContainer">
+            <div class="hidden-sm hidden-md hidden-lg">From:</div>
             <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="index_date_from" name="starting_date" placeholder="From" data-allow-input=true required />
           </div>
         </div>
@@ -21,8 +21,8 @@
           <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
         </div>
         <div class="dateTo">
-          <div class="form-group">
-            <label for="ending_date" class="hidden-sm hidden-md hidden-lg">To:</label>
+          <div class="form-group dateTextContainer">
+            <div class="hidden-sm hidden-md hidden-lg">To:</div>
             <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="index_date_to" name="ending_date" placeholder="To" data-allow-input=true required />
           </div>
         </div>
