working on nav search bar

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
         </div>
         <div class="dateFrom">
           <div class="form-group dateTextContainer">
-            <div class="hidden-sm hidden-md hidden-lg">From:</div>
+            <div class="hidden-sm hidden-md hidden-lg dateTextContainerText">From:</div>
             <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="index_date_from" name="starting_date" placeholder="From" data-allow-input=true required />
           </div>
         </div>
@@ -22,7 +22,7 @@
         </div>
         <div class="dateTo">
           <div class="form-group dateTextContainer">
-            <div class="hidden-sm hidden-md hidden-lg">To:</div>
+            <div class="hidden-sm hidden-md hidden-lg dateTextContainerText">To:</div>
             <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="index_date_to" name="ending_date" placeholder="To" data-allow-input=true required />
           </div>
         </div>
