working on nav search bar

--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -113,12 +113,17 @@ header {
     margin-bottom: 20px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     .dateTextContainer {
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: flex-end;
+      justify-content: center;
+      .dateTextContainerText {
+        font-size: 18px;
+        color: white;
+        margin-right: 6px;
+      }
     }
     label {
       color: white;
