--- a/public/css/welcome/index.css
+++ b/public/css/welcome/index.css
@@ -136,14 +136,20 @@ header {
   margin-bottom: 20px;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .searchContainer .dateTo .dateTextContainer {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
+}
+
+.searchContainer .dateTo .dateTextContainer .dateTextContainerText {
+  font-size: 18px;
+  color: white;
+  margin-right: 6px;
 }
 
 .searchContainer .dateTo label {
