--- a/app/views/application_status_change_mailer/application_approved_email.html.erb
+++ b/app/views/application_status_change_mailer/application_approved_email.html.erb
@@ -1,7 +1,10 @@
 <h2>Great News <%= @application.user.first_name %>!</h2>
 <p>Your request to join the Salt-Up event, <%= @application.event.title %>, has been approved! You have been added to the guest list for this event.</p>
 <!-- needs to be current_user_dashboard_path when in production... -->
-<p>Details about the event are available on your Salt-Up <%= link_to 'dashboard', current_user_dashboard_url %>. If for some reason you cannot make it to the event, please remove your application to make room for others. You can do this as well on your Salt-Up dashboard. Directions to the event can be obtained here: <%= link_to "here", "http://maps.google.com/maps?saddr=#{@application.user&.address&.full_address || nil}&daddr=#{@application.event.address.full_address}" %>
+<p>Details about the event are available on your Salt-Up <%= link_to 'dashboard', current_user_dashboard_url %>. The address for the event is <%= @application.event.address.full_address %>. Directions to the event can be obtained here: <%= link_to "here", "http://maps.google.com/maps?saddr=#{@application.user&.address&.full_address || nil}&daddr=#{@application.event.address.full_address}" %>. Feel free to message the host with any questions.
+</p>
+<p>
+   If for some reason you cannot make it to the event, please remove your application to make room for others.
 </p>
 <p>Meet Someone Different!</p>
 <p>The Salt-Up Staff</p>
