--- a/public/css/pages/about.scss
+++ b/public/css/pages/about.scss
@@ -1,3 +1,11 @@
 .img-half{
-  width: 50%
+  height: 200px;
+}
+.bio-box{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
 }
