--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -74,9 +74,13 @@ header {
       flex-direction: row;
       align-items: center;
       justify-content: center;
+      background-color: white;
+      padding-left: 5px;
+      border: 2px solid;
+      border-radius: 5px;
       .dateTextContainerText {
         font-size: 18px;
-        color: white;
+        color: black;
         margin-right: 6px;
       }
     }
@@ -87,8 +91,6 @@ header {
     }
     input {
       width: 100%;
-      border-radius: 5px;
-      border: 2px solid black;
     }
   }
   .indexArrowContainer {
@@ -119,9 +121,13 @@ header {
       flex-direction: row;
       align-items: center;
       justify-content: center;
+      background-color: white;
+      padding-left: 5px;
+      border: 2px solid;
+      border-radius: 5px;
       .dateTextContainerText {
         font-size: 18px;
-        color: white;
+        color: black;
         margin-right: 6px;
       }
     }
@@ -132,8 +138,6 @@ header {
     }
     input {
       width: 100%;
-      border: 2px solid black;
-      border-radius: 5px;
     }
   }
   button {
