--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -41,7 +41,6 @@ header {
     border: none;
     height: 45px;
     font-size: 14px;
-    border: 2px solid black;
   }
   .form-group {
     margin-bottom: 0;
@@ -213,6 +212,11 @@ header {
     }
     .dateFrom {
       margin-bottom: 0px;
+      .dateTextContainer {
+        padding-left: 5px;
+        border: 2px solid;
+        border-radius: 5px;
+      }
       input {
         border-top: 2px solid black;
         border-bottom: 2px solid black;
@@ -238,6 +242,11 @@ header {
     }
     .dateTo {
       margin-bottom: 0px;
+      .dateTextContainer {
+        padding-left: 5px;
+        border: 2px solid;
+        border-radius: 5px;
+      }
       input {
         border-top: 2px solid black;
         border-bottom: 2px solid black;
