--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -243,7 +243,7 @@ header {
     .dateTo {
       margin-bottom: 0px;
       .dateTextContainer {
-        padding-left: none;
+        padding-left: 0;
         border: none;
         border-radius: 0;
       }
