--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -18,7 +18,7 @@ header {
   display: none !important;
 }
 .jumbotron {
-  background-image: url('../../assets/food.jpg');
+  background-image: url('../../assets/picnic.jpg');
   background-position: center;
   background-size: cover;
   height: 400px;
@@ -296,5 +296,12 @@ header {
 @media screen and (min-width: 992px) {
   .info_text {
       padding: 0 40px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .searchContainer {
+    .cityContainer {
+      flex: 5;
+    }
   }
 }
