--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,7 @@
 <div class="frontPageMargin"></div>
 <div class="jumbotron">
   <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
+    <h2 class="text-center"><i>Meet Someone New...</i></h2>
     <form method="get" action="#" enctype="multipart/form-data">
       <div class="searchContainer">
         <div class="cityContainer">
