added my profile to the about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -30,16 +30,10 @@
       <div class="col-xs-12 col-md-4 profile-picture-box">
         <img class="img-responsive img-half pull-right" src="/assets/Isaiah.jpg"/>
       </div>
-      <h4 class="name">Isaiah Fasoldt</h4>
-      <h3 class="title"><strong>Back-End Engineer</strong></h3>
+      <h4 class="name">Jake Willingham</h4>
+      <h3 class="title"><strong>Front-End Engineer</strong></h3>
       <p class="bio">
-        I came up with the idea of Salt-up in the spring of 2016. I wanted to make a website that would allow me to invite strangers over to my house, cook for them, and therby build a community of different people whom I would never otherwise have met. At first, I envisioned it as having a transactional/financial element, much like airbnb. I love how airbnb allows travelers to step into communitites as temporary members, as sojourners, rather than tourists. I soon realized, however, that the economic realities of such a model would scope the likely users of my service to only the wealthy, destroying my original intent. So I changed it. Instead of being a business model, Salt-up became overtly community-building in focus.
-      </p>
-      <p class="bio">
-        Jake and I decided to make Salt-up our final project for the Iron Yard, a coding school in Indianapolis. The beauty of the site today is due almost entirely to Jake's hard work and vision! At first, he wrote the JavaScript and React, and I built the API and handled the data modeling. As time went on, however, our work merged and our scopes blurred. He started to work with the data, and I started using React.
-      </p>
-      <p class="bio">
-        I'm a back-end developer who also enjoys using front-end frameworks such as React. I spent a wonderful five years in the South Bronx teaching high school, and I hope to spend an even longer and better time in Indianapolis! I love to meet new and different people and hope to see you at my house someday. I make a mean Thai Curry! Check out my info and events at my <a href="/users/1">profile page</a>.
+        I'm a front-end engineer, but I am eager to continue working with Ruby on Rails and Node.js. Aside from coding my hobbies include gaming, Magic the Gathering, cooking, traveling, and photography. I've been fortunate enough to travel around the globe doing the things that I love the most. I believe that exploring unique cultures, cuisine, and meeting new people is what life is all about, so when Isaiah pitched the idea of Salt-up to me, I jumped right on board. To see my events, go to my <a href="/users/2">profile page</a>.
       </p>
     </div>
   </div>
