added my image to profile page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -28,7 +28,7 @@
     </div>
     <div class="col-xs-12 col-md-7 bio-box">
       <div class="col-xs-12 col-md-4 profile-picture-box">
-        <img class="img-responsive img-half pull-right" src="/assets/Isaiah.jpg"/>
+        <img class="img-responsive img-half pull-right" src="/assets/Jake.jpg"/>
       </div>
       <h4 class="name">Jake Willingham</h4>
       <h3 class="title"><strong>Front-End Engineer</strong></h3>
