--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,7 +4,7 @@
 
 
 <div class="container-fluid">
-  <div class="row">
+  <div class="row is-flex">
     <div class="col-xs-12 text-center">
       <h1>Who We Are</h1>
     </div>
