--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,6 +2,26 @@
 <link rel="stylesheet" href="/css/pages/about.css" />
 <% end %>
 
+          <div class="container-fluid">
+            <div class="col-xs-12 text-vertical-center text-center is-flex">
+              <div class="col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                <image class="img-responsive img-circle" src="/assets/Isaiah.jpg" />
+              </div>
+              <div class="col-sm-8 col-sm-offset-1 col-xs-12 text-left">
+                <p class="bio">
+                  I came up with the idea of Salt-up in the spring of 2016. I wanted to make a website that would allow me to invite strangers over to my house, cook for them, and therby build a community of different people whom I would never otherwise have met. At first, I envisioned it as having a transactional/financial element, much like airbnb. I love how airbnb allows travelers to step into communitites as temporary members, as sojourners, rather than tourists. I soon realized, however, that the economic realities of such a model would scope the likely users of my service to only the wealthy, destroying my original intent. So I changed it. Instead of being a business model, Salt-up became overtly community-building in focus.
+                </p>
+                <p class="bio">
+                  Jake and I decided to make Salt-up our final project for the Iron Yard, a coding school in Indianapolis. The beauty of the site today is due almost entirely to Jake's hard work and vision! At first, he wrote the JavaScript and React, and I built the API and handled the data modeling. As time went on, however, our work merged and our scopes blurred. He started to work with the data, and I started using React.
+                </p>
+                <p class="bio">
+                  I'm a back-end developer who also enjoys using front-end frameworks such as React. I spent a wonderful five years in the South Bronx teaching high school, and I hope to spend an even longer and better time in Indianapolis! I love to meet new and different people and hope to see you at my house someday. I make a mean Thai Curry! Check out my info and events at my <a href="/users/1">profile page</a>.
+                </p>
+              </div>
+
+            </div>
+          </div>
+
 
 <div class="container-fluid">
   <div class="row is-flex">
@@ -10,7 +30,7 @@
     </div>
     <div class="col-xs-12 bio-box">
       <div class="col-xs-12 col-md-4 profile-picture-box">
-        <img class="img-responsive img-half" src="/assets/Isaiah.jpg"/>
+        <img class="img-responsive img-round" src="/assets/Isaiah.jpg"/>
       </div>
       <div class="col-xs-12 col-md-8">
         <h4 class="name">Isaiah Fasoldt</h4>
