--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -25,7 +25,7 @@
           <div class="container-fluid">
             <div class="col-xs-12 text-vertical-center text-center is-flex">
               <div class="col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
-                <image class="img-responsive img-circle" src="/assets/Isaiah.jpg" />
+                <image class="img-responsive img-circle" src="/assets/Jake.jpg" />
               </div>
               <div class="col-sm-8 col-sm-offset-1 col-xs-12 text-left">
                 <h4 class="name">Jake Willingham</h4>
