--- a/public/css/pages/about.scss
+++ b/public/css/pages/about.scss
@@ -1,14 +1,9 @@
 .img-half{
   height: 200px;
 }
-// .bio-box{
-//   display: flex;
-//   flex-direction: row;
-//   flex-wrap: nowrap;
-//   justify-content: space-around;
-//   align-items: center;
-//   align-content: space-around;
-// }
+.bio-rect{
+  margin-top: 75px;
+}
 
 
 .row.is-flex {
