--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/css/pages/about.css" />
 <% end %>
 
-          <div class="container-fluid">
+          <div class="container-fluid bio-rect">
             <div class="col-xs-12 text-vertical-center text-center is-flex">
               <div class="col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
                 <image class="img-responsive img-circle" src="/assets/Isaiah.jpg" />
@@ -22,17 +22,19 @@
               </div>
             </div>
           </div>
-          <div class="container-fluid">
-            <div class="col-xs-12 text-vertical-center text-center is-flex">
-              <div class="col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
-                <image class="img-responsive img-circle" src="/assets/jakeclose.jpg" />
-              </div>
-              <div class="col-sm-8 col-sm-offset-1 col-xs-12 text-left">
-                <h4 class="name">Jake Willingham</h4>
-                <h3 class="title"><strong>Front-End Engineer</strong></h3>
-                <p class="bio">
-                  I'm a front-end engineer, but I am eager to continue working with Ruby on Rails and Node.js. Aside from coding my hobbies include gaming, Magic the Gathering, cooking, traveling, and photography. I've been fortunate enough to travel around the globe doing the things that I love the most. I believe that exploring unique cultures, cuisine, and meeting new people is what life is all about, so when Isaiah pitched the idea of Salt-up to me, I jumped right on board. To see my events, go to my <a href="/users/2">profile page</a>.
-                </p>
+          <div class="container-fluid bio-rect">
+            <div class="row">
+              <div class="col-xs-12 text-vertical-center text-center is-flex">
+                <div class="col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                  <image class="img-responsive img-circle" src="/assets/jakeclose.jpg" />
+                </div>
+                <div class="col-sm-8 col-sm-offset-1 col-xs-12 text-left">
+                  <h4 class="name">Jake Willingham</h4>
+                  <h3 class="title"><strong>Front-End Engineer</strong></h3>
+                  <p class="bio">
+                    I'm a front-end engineer, but I am eager to continue working with Ruby on Rails and Node.js. Aside from coding my hobbies include gaming, Magic the Gathering, cooking, traveling, and photography. I've been fortunate enough to travel around the globe doing the things that I love the most. I believe that exploring unique cultures, cuisine, and meeting new people is what life is all about, so when Isaiah pitched the idea of Salt-up to me, I jumped right on board. To see my events, go to my <a href="/users/2">profile page</a>.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
