--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,7 +4,7 @@
 
           <div class="container-fluid bio-rect">
             <div class="col-xs-12 text-vertical-center text-center is-flex">
-              <div class="col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+              <div class="col-sm-3 col-sm-offset-0 col-xs-12">
                 <image class="img-responsive img-circle" src="/assets/Isaiah.jpg" />
               </div>
               <div class="col-sm-8 col-sm-offset-1 col-xs-12 text-left">
@@ -24,7 +24,7 @@
           </div>
           <div class="container-fluid bio-rect">
             <div class="col-xs-12 text-vertical-center text-center is-flex">
-              <div class="col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+              <div class="col-sm-3 col-sm-offset-0 col-xs-12">
                 <image class="img-responsive img-circle" src="/assets/jakeclose.jpg" />
               </div>
               <div class="col-sm-8 col-sm-offset-1 col-xs-12 text-left">
