--- a/public/css/pages/about.scss
+++ b/public/css/pages/about.scss
@@ -2,7 +2,12 @@
   height: 200px;
 }
 .bio-rect{
-  margin-top: 75px;
+  margin: 50px 0 50px 0;
+
+}
+.bio-rect1{
+  margin: 0 0 50px 0;
+  border-top: 1px solid grey;
 }
 
 
@@ -14,7 +19,7 @@
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
-   align-items: flex;
+   align-items: center;
 }
 
 .is-flex > [class*='col-'] {
