--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -22,7 +22,7 @@
               </div>
             </div>
           </div>
-          <div class="container-fluid bio-rect">
+          <div class="container-fluid bio-rect1">
             <div class="col-xs-12 text-vertical-center text-center is-flex">
               <div class="col-sm-3 col-sm-offset-0 col-xs-12">
                 <image class="img-responsive img-circle" src="/assets/jakeclose.jpg" />
